# Didi-competition-solution

./: README.md
src/didi_classify/: CMakeLists.txt  package.xml
src/didi_proposal/: CMakeLists.txt  README.md  package.xml
src/didi_proposal/conf/: camera-lidar-hdl32.yml
src/didi_proposal/scripts/: .radar2image.py.swp  lidar2image.py  radar2image.py
src/didi_visualize/: CMakeLists.txt  package.xml
src/didi_visualize/launch/: display_rosbag_rviz.launch  display_rviz.launch
