<?xml version="1.0"?>
<package>
  <name>didi_visualize</name>
  <version>1.0.0</version>
  <description>Contains launch files for the DiDi Challenge</description>
  <author email="kimlong.liu@gmail.com">Junlong Liu</author>
  <maintainer email="kimlong.liu@gmail.com">Junlong Liu</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

</package>
